--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: R (>= 4.0.0)
 Imports:
+    markdown,
     shiny
-Collate: 
+Collate:
     'ui.R'
     'server.R'
     'app.R'
