--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: shinyTemplate
+Package: shinyHerdsizeDash
 Title: A Template for Shiny App Packages
 Version: 1.0
 Authors@R:
-    person("Wiktor", "Gustafsson", ,
-    "wiktor.gustafsson@sva.se",
+    person("Ivana", "Ewerlöf", ,
+    "ivana.ewerlof@sva.se",
     role = c("aut", "cre"))
 Description: Provides a template for producing an Shiny app which is
              deployed as an R package.
@@ -13,8 +13,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: R (>= 4.0.0)
 Imports:
-    shiny
+    shiny,
+	data.table,
+	bslib,
+	ggplot2,
+	gghighlight
+LazyData: true
 Collate: 
     'ui.R'
     'server.R'
     'app.R'
+    'datafiles.R'
