Import markdown, and change source of README.md

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ import(bslib)
 import(data.table)
 import(gghighlight)
 import(ggplot2)
+import(markdown)
 import(shiny)
 importFrom(shiny,runApp)
 importFrom(shiny,shinyApp)
