--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: shinyHerdsizeDash
-Title: A Template for Shiny App Packages
+Title: A test shiny application on herdsize.
 Version: 1.0
 Authors@R:
     person("Ivana", "Ewerlöf", ,
     "ivana.ewerlof@sva.se",
     role = c("aut", "cre"))
-Description: Provides a template for producing an Shiny app which is
-             deployed as an R package.
+Description: A test shiny application on herdsize.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: R (>= 4.0.0)
 Imports:
+	markdown,
     shiny,
 	data.table,
 	bslib,
