--- a/docker.yml
+++ b/docker.yml
@@ -6,12 +6,7 @@ trigger:
   branches:
     include:
       - master
-  paths:
-    include:
-      - Dockerfile
-      - docker.yml
-    exclude:
-      - .
+  batch: true
 
 pool:
   vmImage: 'ubuntu-latest'
