--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,21 @@
-Package: shinyHerdsizeDash
-Title: A test shiny application on herdsize.
+Package: shinyTemplate
+Title: A Template for Shiny App Packages
 Version: 1.0
 Authors@R:
-    person("Ivana", "Ewerlöf", ,
-    "ivana.ewerlof@sva.se",
+    person("Wiktor", "Gustafsson", ,
+    "wiktor.gustafsson@sva.se",
     role = c("aut", "cre"))
-Description: A test shiny application on herdsize.
+Description: Provides a template for producing an Shiny app which is
+             deployed as an R package.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: R (>= 4.0.0)
 Imports:
-	markdown,
-    shiny,
-	data.table,
-	bslib,
-	ggplot2,
-	gghighlight
-LazyData: true
-Collate: 
+    markdown,
+    shiny
+Collate:
     'ui.R'
     'server.R'
     'app.R'
-    'datafiles.R'
