--- a/docker.yml
+++ b/docker.yml
@@ -27,7 +27,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'ACR'
-    repository: '$(packageName)'
+    repository: $(packageName)
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     tags: 'latest'
