Update docker.yml for Azure Pipelines

--- a/docker.yml
+++ b/docker.yml
@@ -20,7 +20,7 @@ steps:
   displayName: 'Fetch remote Dockerfile if there is none in the repo'
 
 - bash: |
-    echo "##vso[task.setvariable variable=packageName;isOutput=true]$(grep -i ^package /tmp/app/DESCRIPTION | cut -d : -d \  -f 2)"
+    echo "##vso[task.setvariable variable=packageName;isOutput=true]$(grep -i ^package DESCRIPTION | cut -d : -d \  -f 2 | tr -d '\r')"
 
   name: "getPackage"
   displayName: 'Get package name from DESCRIPTION file'
