--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: shinyTemplate
-Title: A Template for Shiny App Packages
+Package: AMView
+Title: Visualizing AMU Data
 Version: 1.0
 Authors@R:
     person("Wiktor", "Gustafsson", ,
     "wiktor.gustafsson@sva.se",
     role = c("aut", "cre"))
-Description: Provides a template for producing an Shiny app which is
-             deployed as an R package.
+Description: A package to clean AMU data and visualize it in an interactive
+             Shiny app.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
