--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,16 @@
 
 export(app)
 export(run_app)
-import(markdown)
-import(shiny)
+importFrom(shiny,fluidPage)
+importFrom(shiny,includeCSS)
 importFrom(shiny,runApp)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tags)
+importFrom(shinydashboard,dashboardBody)
+importFrom(shinydashboard,dashboardHeader)
+importFrom(shinydashboard,dashboardPage)
+importFrom(shinydashboard,dashboardSidebar)
+importFrom(shinydashboard,menuItem)
+importFrom(shinydashboard,sidebarMenu)
+importFrom(shinydashboard,tabItem)
+importFrom(shinydashboard,tabItems)
