--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
 importFrom(shiny,headerPanel)
-importFrom(shiny,inputPanel)
 importFrom(shiny,observeEvent)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
@@ -26,6 +25,7 @@ importFrom(shiny,sliderInput)
 importFrom(shiny,tabPanel)
 importFrom(shiny,tabsetPanel)
 importFrom(shiny,tags)
+importFrom(shiny,wellPanel)
 importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,pickerOptions)
 importFrom(shinyWidgets,updatePickerInput)
