Revert "Try to fix plotly error"
This reverts commit c7c10d2376fb87ddad0d6e24359aa78b86012e0b.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,9 @@ Imports:
     DT,
     markdown,
     plotly,
-    rprojroot,
     shiny,
     shinyTime,
-    shinyWidgets,
-    withr
+    shinyWidgets
 Collate:
     'AMU_data.R'
     'AMView-package.R'
