Revert "Try to fix plotly error"
This reverts commit 526ed295134d1c7ee861ca5d48f7a612b16c1484.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
 importFrom(shiny,headerPanel)
+importFrom(shiny,inputPanel)
 importFrom(shiny,observeEvent)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
@@ -25,7 +26,6 @@ importFrom(shiny,sliderInput)
 importFrom(shiny,tabPanel)
 importFrom(shiny,tabsetPanel)
 importFrom(shiny,tags)
-importFrom(shiny,wellPanel)
 importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,pickerOptions)
 importFrom(shinyWidgets,updatePickerInput)
