Update docker.yml for Azure Pipelines

--- a/docker.yml
+++ b/docker.yml
@@ -14,8 +14,8 @@ pool:
 steps:
 
 - bash: |
-    if ! [[ -f Dockerfile ]]; then
-      wget https://svastatichosting.z6.web.core.windows.net/shinyTemplate/Dockerfile
+    if ! [[ -f Dockerfile-fedora-latest ]]; then
+      wget https://svastatichosting.z6.web.core.windows.net/shinyTemplate/shiny_dockerfile_fedora/Dockerfile-fedora-latest
     fi
   displayName: 'Fetch remote Dockerfile if there is none in the repo'
 
@@ -30,5 +30,5 @@ steps:
     containerRegistry: 'ACR'
     repository: $(getPackage.packageName)
     command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+    Dockerfile: '**/Dockerfile-fedora-latest'
     tags: 'latest'
