--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,24 +8,58 @@ importFrom(DT,datatable)
 importFrom(DT,renderDataTable)
 importFrom(bslib,bs_theme)
 importFrom(data.table,fread)
+importFrom(data.table,is.data.table)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,set)
+importFrom(data.table,setDT)
+importFrom(data.table,setnames)
+importFrom(eurostat,get_eurostat_geospatial)
+importFrom(leaflet,addPolygons)
+importFrom(leaflet,addPolylines)
+importFrom(leaflet,addTiles)
+importFrom(leaflet,colorBin)
+importFrom(leaflet,htmlEscape)
+importFrom(leaflet,labeolOptions)
+importFrom(leaflet,leaflet)
+importFrom(leaflet,leafletOutput)
+importFrom(leaflet,leafletProxy)
+importFrom(leaflet,removeShape)
+importFrom(leaflet,renderLeaflet)
+importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
+importFrom(shiny,br)
 importFrom(shiny,column)
-importFrom(shiny,fluidPage)
+importFrom(shiny,downloadButton)
+importFrom(shiny,downloadHandler)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
+importFrom(shiny,h4)
+importFrom(shiny,h5)
 importFrom(shiny,headerPanel)
+importFrom(shiny,icon)
+importFrom(shiny,modalDialog)
+importFrom(shiny,navbarPage)
 importFrom(shiny,observeEvent)
+importFrom(shiny,p)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
 importFrom(shiny,reactiveVal)
+importFrom(shiny,renderUI)
+importFrom(shiny,runApp)
+importFrom(shiny,selectInput)
+importFrom(shiny,shinyApp)
+importFrom(shiny,showModal)
 importFrom(shiny,sliderInput)
 importFrom(shiny,tabPanel)
-importFrom(shiny,tabsetPanel)
+importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shiny,uiOutput)
+importFrom(shiny,updateRadioButtons)
 importFrom(shiny,wellPanel)
 importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,pickerOptions)
 importFrom(shinyWidgets,updatePickerInput)
+importFrom(shinycssloaders,withSpinner)
+importFrom(shinyscreenshot,screenshotButton)
