--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,12 @@ importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(eurostat,get_eurostat_geospatial)
+importFrom(htmltools,htmlEscape)
 importFrom(leaflet,addPolygons)
 importFrom(leaflet,addPolylines)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,colorBin)
-importFrom(leaflet,htmlEscape)
-importFrom(leaflet,labeolOptions)
+importFrom(leaflet,labelOptions)
 importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOutput)
 importFrom(leaflet,leafletProxy)
