--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(leaflet,addTiles)
 importFrom(leaflet,colorBin)
 importFrom(leaflet,labelOptions)
 importFrom(leaflet,leaflet)
+importFrom(leaflet,leafletOptions)
 importFrom(leaflet,leafletOutput)
 importFrom(leaflet,leafletProxy)
 importFrom(leaflet,removeShape)
