--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: AMView
 Title: Visualizing AMU Data
-Version: 1.0
+Version: 1.0-1
 Authors@R:
     person("Wiktor", "Gustafsson", ,
     "wiktor.gustafsson@sva.se",
     role = c("aut", "cre"))
-Description: A package to visualize AMU data in an interactive Shiny app.
+Description: Visualize AMU data in an interactive Shiny app.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -13,6 +13,7 @@ RoxygenNote: 7.2.3
 Depends: R (>= 4.1)
 Imports:
     data.table,
+    bslib,
     DT,
     eurostat,
     htmltools,
