--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,3 +66,5 @@ importFrom(shinyWidgets,pickerOptions)
 importFrom(shinyWidgets,updatePickerInput)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinyscreenshot,screenshotButton)
+importFrom(stats,runif)
+importFrom(utils,write.csv)
